--- a/app/src/main/res/layout/point_detect.xml
+++ b/app/src/main/res/layout/point_detect.xml
@@ -55,8 +55,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
@@ -67,6 +66,7 @@
             android:src="@drawable/m1" />
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -96,10 +96,10 @@
 
     <LinearLayout
         android:id="@id/chart"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1.0"
-        android:orientation="horizontal"
-        android:visibility="gone" />
+        android:layout_weight="1"
+        android:orientation="horizontal" />
 
 </LinearLayout>
