--- a/app/src/main/res/layout/customer_profiles.xml
+++ b/app/src/main/res/layout/customer_profiles.xml
@@ -149,14 +149,13 @@
                         android:textColor="@color/color_33" />
 
                     <EditText
+
                         android:id="@id/customer_name_edit"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
-                        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                        android:drawablePadding="8dp"
                         android:hint="点击输入名称"
                         android:inputType="textPersonName"
                         android:lines="1"
@@ -178,30 +177,99 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginLeft="12dp"
+                        android:gravity="center_vertical"
                         android:layout_marginRight="12dp"
                         android:text="@string/birthday"
                         android:textColor="@color/color_33" />
 
-                    <EditText
-                        android:id="@+id/et_ChangeDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="22dp"
-                        android:background="@drawable/shape_corner_edit"
-                        android:drawablePadding="8dp"
-                        android:focusableInTouchMode="false"
-                        android:hint="点击输入生日"
-                        android:lines="1"
-                        android:paddingLeft="8dp"
-                        android:paddingRight="8dp"
-                        android:singleLine="true"
-                        android:text=""
-                        android:textColor="@color/color_33"
-                        android:textColorHint="@color/color_99"
-                        android:textSize="14sp" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/et_year"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="40dp"
+                            android:layout_marginLeft="12dp"
+                            android:background="@drawable/shape_corner_edit"
+                            android:drawablePadding="8dp"
+                            android:hint=""
+                            android:inputType="number"
+                            android:lines="1"
+                            android:paddingLeft="8dp"
+                            android:paddingRight="8dp"
+                            android:singleLine="true"
+                            android:text=""
+                            android:textColor="@color/color_33"
+                            android:textColorHint="@color/color_99"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="4dp"
+                            android:text="年"
+                            android:textColor="@color/color_33" />
+                        <EditText
+                            android:inputType="number"
+                            android:id="@+id/et_month"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="40dp"
+                            android:background="@drawable/shape_corner_edit"
+                            android:drawablePadding="8dp"
+                            android:hint=""
+                            android:lines="1"
+                            android:paddingLeft="8dp"
+                            android:paddingRight="8dp"
+                            android:singleLine="true"
+                            android:text=""
+                            android:textColor="@color/color_33"
+                            android:textColorHint="@color/color_99"
+                            android:textSize="14sp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="4dp"
+                            android:text="月"
+                            android:textColor="@color/color_33" />
+
+                        <EditText
+                            android:id="@+id/et_day"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="40dp"
+
+                            android:background="@drawable/shape_corner_edit"
+                            android:drawablePadding="8dp"
+                            android:hint=""
+                            android:lines="1"
+                            android:paddingLeft="8dp"
+                            android:paddingRight="8dp"
+                            android:singleLine="true"
+                            android:text=""
+                            android:inputType="number"
+                            android:textColor="@color/color_33"
+                            android:textColorHint="@color/color_99"
+                            android:textSize="14sp"/>
+
+                        <TextView
+                            android:layout_marginRight="22dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:text="日"
+                            android:textColor="@color/color_33" />
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -383,7 +451,7 @@
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
                         android:drawablePadding="8dp"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:hint="点击输入身高"
                         android:inputType="number"
                         android:lines="1"
@@ -419,7 +487,7 @@
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
                         android:drawablePadding="8dp"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:hint="点击输入体重"
                         android:inputType="number"
                         android:lines="1"
@@ -455,7 +523,7 @@
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
                         android:drawablePadding="8dp"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:hint="点击输入脉搏"
                         android:inputType="number"
                         android:lines="1"
@@ -491,7 +559,7 @@
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
                         android:drawablePadding="8dp"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:hint="点击输入收缩压"
                         android:inputType="number"
                         android:lines="1"
@@ -527,7 +595,7 @@
                         android:layout_marginRight="22dp"
                         android:background="@drawable/shape_corner_edit"
                         android:drawablePadding="8dp"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:hint="点击输入舒张"
                         android:inputType="number"
                         android:lines="1"
@@ -545,6 +613,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -587,6 +656,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <TextView
@@ -624,6 +694,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
