--- a/app/src/main/res/layout/detect_image_item.xml
+++ b/app/src/main/res/layout/detect_image_item.xml
@@ -32,9 +32,11 @@
                 android:id="@id/grid_item_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:textColor="#ff666666"
-                android:textSize="14sp" />
+                android:gravity="center"
+                android:lines="2"
+                android:textSize="12sp"
+                android:layout_marginTop="4dp"
+                android:textColor="#ff666666" />
 
         </LinearLayout>
 
