--- a/app/src/main/res/layout/device_manage.xml
+++ b/app/src/main/res/layout/device_manage.xml
@@ -131,8 +131,7 @@
                 android:layout_width="120dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/background_btn"
-                android:backgroundTint="#ffffffff"
+                android:background="@drawable/background_btn2"
                 android:gravity="center"
                 android:text="断开连接"
                 android:textColor="@color/colorPrimary"
